--- a/TinderApp/AppShell.xaml
+++ b/TinderApp/AppShell.xaml
@@ -3,13 +3,13 @@
     x:Class="TinderApp.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:TinderApp"
+    xmlns:local="clr-namespace:TinderApp.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="TinderApp">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate local:LoginPage}"
         Route="MainPage" />
 
 </Shell>
