--- a/TinderApp/Views/UsuarioPage.xaml
+++ b/TinderApp/Views/UsuarioPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodel="clr-namespace:TinderApp.ViewModels"
-             xmlns:model="clr-namespace:TinderApp.Views"
+             xmlns:model="clr-namespace:TinderApp.DTOs"
              x:Class="TinderApp.Views.UsuarioPage"
              Title="{Binding Titulo}"
              x:DataType="viewmodel:UsuarioViewModel">
